--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="assets/favicon-rocket.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsive.css">
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/f12996b1b1.js" crossorigin="anonymous"></script>
@@ -61,16 +61,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0003_vivara.png" alt="First slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0003_vivara.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0000_bacio.png" alt="Second slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0000_bacio.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0001_dannysports.png" alt="Third slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0001_dannysports.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0002_dufry.png" alt="fourth slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0002_dufry.png" alt="fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -90,17 +90,17 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="icon" src="/assets/xp.png" alt="">
+        <img class="icon" src="./assets/xp.png" alt="">
 
         <h2>Experiência</h2>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="icon" src="/assets/smart.png" alt="">
+        <img class="icon" src="./assets/smart.png" alt="">
 
         <h2>Gestão eficiente</h2>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="icon" src="/assets/rocket.png" alt="">
+        <img class="icon" src="./assets/rocket.png" alt="">
 
         <h2>Qualidade e inovação</h2>
       </div><!-- /.col-lg-4 -->
@@ -119,7 +119,7 @@
         </span>porque foguete não tem ré.</p>
       </div>
       <div class="col-md-5">
-        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/quem somos.png" alt="foto-sobre">     </div>
+        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="./assets/quem somos.png" alt="foto-sobre">     </div>
     </div>
     <hr class="featurette-divider">
 
@@ -133,7 +133,7 @@
             a dedicação e a parceria.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/equipe.png" alt="foto-sobre">
+        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="./assets/equipe.png" alt="foto-sobre">
       </div>
     </div>
 
@@ -148,7 +148,7 @@
           quaisquer características especiais do local.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/tecnologia.gif" alt="foto-sobre">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="./assets/tecnologia.gif" alt="foto-sobre">
 
       </div>
     </div>
@@ -164,13 +164,13 @@
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
-        src="/assets/grid/galeria-01-02.png"
+        src="./assets/grid/galeria-01-02.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
   
       <img
-        src="/assets/grid/vertical-photo-2.png"
+        src="./assets/grid/vertical-photo-2.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Wintry Mountain Landscape"
       />
@@ -178,13 +178,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="/assets/grid/vertical-photo-1.png"
+        src="./assets/grid/vertical-photo-1.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Mountains in the Clouds"
       />
   
       <img
-        src="/assets/grid/work-03.png"
+        src="./assets/grid/work-03.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
@@ -192,13 +192,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="/assets/grid/galeria-02-01.png"
+        src="./assets/grid/galeria-02-01.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Waves at Sea"
       />
   
       <img
-        src="/assets/grid/vertical-photo-3.png"
+        src="./assets/grid/vertical-photo-3.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Yosemite National Park"
       />
