--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="assets/favicon-rocket.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/responsive.css">
+    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/f12996b1b1.js" crossorigin="anonymous"></script>
@@ -24,32 +24,17 @@
 </head>
 <body>
 
-
-    <div class="container-infos">
-        <div class="tel infos">
-            <i class="fa-solid fa-phone"></i>
-            <a href="tel:+551134672506">+55 (11) 3467-2506</a>
-        </div>
-        <div class="mail infos">
-            <i class="fa-solid fa-envelope"></i>
-            <a href="mailto:contato@rocketconstrutora.com.br?">contato@rocketconstrutora.com.br</a>
-        </div>
-    </div>
-
-
-    <div class="container1">
-            <nav>
-                <img src="assets/rocket logo main-black.png" class="logo">
-                <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#quemsomos">Quem somos</a></li>
-                    <li><a href="#comofazemos">Como fazemos</a></li>
-                    <li><a href="#contato">Contato</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-                </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-            </nav> 
-    </div>
+    <nav class="container1" id="header-rocket">
+        <img src="assets/rocket logo main-branco.png" class="logo">
+        <ul class="navigation" id="sidemenu">
+          <li><a href="#header">Home</a></li>
+          <li><a href="#quemsomos">Quem somos</a></li>
+          <li><a href="#comofazemos">Como fazemos</a></li>
+          <li><a href="#contato">Contato</a></li>
+          <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
+        </ul>
+        <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+    </nav> 
 
     <div id="header">
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
@@ -61,16 +46,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0003_vivara.png" alt="First slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0003_vivara.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0000_bacio.png" alt="Second slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0000_bacio.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0001_dannysports.png" alt="Third slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0001_dannysports.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-site-rcoket_0002_dufry.png" alt="fourth slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0002_dufry.png" alt="fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -90,18 +75,15 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="icon" src="./assets/xp.png" alt="">
-
+        <img class="icon" src="/assets/xp.png" alt="icone de experiência">
         <h2>Experiência</h2>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="icon" src="./assets/smart.png" alt="">
-
+        <img class="icon" src="/assets/smart.png" alt="Icone de Gestão eficiente">
         <h2>Gestão eficiente</h2>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="icon" src="./assets/rocket.png" alt="">
-
+        <img class="icon" src="/assets/rocket.png" alt="Icone de Qualidade e inovação">
         <h2>Qualidade e inovação</h2>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
@@ -119,7 +101,7 @@
         </span>porque foguete não tem ré.</p>
       </div>
       <div class="col-md-5">
-        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="./assets/quem somos.png" alt="foto-sobre">     </div>
+        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/quem somos.png" alt="foto-sobre">     </div>
     </div>
     <hr class="featurette-divider">
 
@@ -133,7 +115,7 @@
             a dedicação e a parceria.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="./assets/equipe.png" alt="foto-sobre">
+        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/equipe.png" alt="foto-sobre">
       </div>
     </div>
 
@@ -148,7 +130,7 @@
           quaisquer características especiais do local.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="./assets/tecnologia.gif" alt="foto-sobre">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/tecnologia.gif" alt="foto-sobre">
 
       </div>
     </div>
@@ -164,13 +146,13 @@
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
-        src="./assets/grid/galeria-01-02.png"
+        src="/assets/grid/galeria-01-02.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
   
       <img
-        src="./assets/grid/vertical-photo-2.png"
+        src="/assets/grid/vertical-photo-2.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Wintry Mountain Landscape"
       />
@@ -178,13 +160,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="./assets/grid/vertical-photo-1.png"
+        src="/assets/grid/vertical-photo-1.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Mountains in the Clouds"
       />
   
       <img
-        src="./assets/grid/work-03.png"
+        src="/assets/grid/work-03.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
@@ -192,13 +174,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="./assets/grid/galeria-02-01.png"
+        src="/assets/grid/galeria-02-01.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Waves at Sea"
       />
   
       <img
-        src="./assets/grid/vertical-photo-3.png"
+        src="/assets/grid/vertical-photo-3.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Yosemite National Park"
       />
@@ -206,29 +188,50 @@
 </div>
 <!------------Galeria de fotos------------->
 
-<!------------Contato------------->
+<footer>
+  <div class="social-icons">
+    <a href="http://www.instagram.com/construtorarocket/" target="_blank"><i class="fa-brands fa-instagram"></i></i></a>
+    <a href="http://www.linkedin.com/company/rocket-construtora/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
+    <a href="tel:+551134672506"><i class="fa-brands fa-x-twitter"></i></a>
+  </div>
+  <div class="contatos">
+    <a href="mailto:">
+      <i class="fa-solid fa-envelope"></i>
+      <p> contato@rocketconstrutora.com.br</p>
+    </a>
+    
+    <a href="tel:+551134672506">
+      <i class="fa-solid fa-phone"></i>
+      <p>+55 (11) 3467-2506</p>
+    </a>
+  </div>
+
+  <div class="copyright">
+    <p>Desenvolvido por: <strong>GioDesigner</strong></p>
+  </div>
+</footer>
 
 
+<!------------fale-conosco------------->
+  <div class="fale-conosco blob">
+    <a href="tel:+551134672506" target="_blank">
+      <p><i class="fa-solid fa-phone"></i>Fale conosco</p>
+    </a>
+  </div>
 
-
-
-
-<!------------Contato------------->
-    <div class="copyright">
-        <p>Desenvolvido por: <strong>GioDesigner</strong></p>
-    </div>
+  
 </body>
-
 <script src="script.js"></script>
-<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 
-<script src="js/jquery.min.js"></script>
-<script src="js/popper.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery.validate.min.js"></script>
-<script src="js/main.js"></script>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/popper.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/jquery.validate.min.js"></script>
+  <script src="js/main.js"></script>
+
 
 </html>
 
