--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <link rel="shortcut icon" href="assets/favicon-rocket.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="/css/style.css">
-    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://kit.fontawesome.com/f12996b1b1.js" crossorigin="anonymous"></script>
@@ -46,16 +46,16 @@
             </ol>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0003_vivara.png" alt="First slide">
+                <img class="d-block w-100" src="assets/carrossel/carrossel-site-rcoket_0003_vivara.png" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0000_bacio.png" alt="Second slide">
+                <img class="d-block w-100" src="assets/carrossel/carrossel-site-rcoket_0000_bacio.png" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0001_dannysports.png" alt="Third slide">
+                <img class="d-block w-100" src="assets/carrossel/carrossel-site-rcoket_0001_dannysports.png" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-site-rcoket_0002_dufry.png" alt="fourth slide">
+                <img class="d-block w-100" src="assets/carrossel/carrossel-site-rcoket_0002_dufry.png" alt="fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -75,15 +75,15 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="icon" src="/assets/xp.png" alt="icone de experiência">
+        <img class="icon" src="assets/xp.png" alt="icone de experiência">
         <h2>Experiência</h2>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="icon" src="/assets/smart.png" alt="Icone de Gestão eficiente">
+        <img class="icon" src="assets/smart.png" alt="Icone de Gestão eficiente">
         <h2>Gestão eficiente</h2>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img class="icon" src="/assets/rocket.png" alt="Icone de Qualidade e inovação">
+        <img class="icon" src="assets/rocket.png" alt="Icone de Qualidade e inovação">
         <h2>Qualidade e inovação</h2>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
@@ -130,7 +130,7 @@
           quaisquer características especiais do local.</p>
       </div>
       <div class="col-md-5">
-        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/tecnologia.gif" alt="foto-sobre">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="assets/tecnologia.gif" alt="foto-sobre">
 
       </div>
     </div>
@@ -234,4 +234,3 @@
 
 
 </html>
-
