--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         </span>porque foguete não tem ré.</p>
       </div>
       <div class="col-md-5">
-        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/quem somos.png" alt="foto-sobre">     </div>
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="assets/quem somos.png" alt="foto-sobre">     </div>
     </div>
     <hr class="featurette-divider">
 
@@ -115,7 +115,7 @@
             a dedicação e a parceria.</p>
       </div>
       <div class="col-md-5 order-md-1">
-        <img  class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="/assets/equipe.png" alt="foto-sobre">
+        <img class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" src="assets/equipe.png" alt="foto-sobre">
       </div>
     </div>
 
@@ -146,13 +146,13 @@
 <div class="row">
     <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
       <img
-        src="/assets/grid/galeria-01-02.png"
+        src="assets/grid/galeria-01-02.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
   
       <img
-        src="/assets/grid/vertical-photo-2.png"
+        src="assets/grid/vertical-photo-2.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Wintry Mountain Landscape"
       />
@@ -160,13 +160,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="/assets/grid/vertical-photo-1.png"
+        src="assets/grid/vertical-photo-1.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Mountains in the Clouds"
       />
   
       <img
-        src="/assets/grid/work-03.png"
+        src="assets/grid/work-03.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Boat on Calm Water"
       />
@@ -174,13 +174,13 @@
   
     <div class="col-lg-4 mb-4 mb-lg-0">
       <img
-        src="/assets/grid/galeria-02-01.png"
+        src="assets/grid/galeria-02-01.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Waves at Sea"
       />
   
       <img
-        src="/assets/grid/vertical-photo-3.png"
+        src="assets/grid/vertical-photo-3.png"
         class="w-100 shadow-1-strong rounded mb-4"
         alt="Yosemite National Park"
       />
