--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <div class="container1">
             <nav>
-                <img src="assets/rocket logo main-black.png" class="logo">
+                <img src="./assets/rocket logo main-black.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#quemsomos">Quem somos</a></li>
