--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/.assets/rocket-logo-grande.png" class="logo">
+                <img src="./assets/rocket-logo-grande.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#quemsomos">Quem somos</a></li>
