--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/x-icon" href="./assets/favicon-rocket.png">
-    <link rel="shortcut icon" href="./assets/favicon-rocket.png" type="image/x-icon">
+    <link rel="icon" type="image/x-icon" href="/assets/favicon-rocket.png">
+    <link rel="shortcut icon" href="assets/favicon-rocket.png" type="image/x-icon">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
@@ -28,7 +28,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="./assets/rocket-logo-grande.png" class="logo">
+                <img src="/assets/rocket-logo-grande.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#quemsomos">Quem somos</a></li>
@@ -48,22 +48,28 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0000_vivara.jpg" alt="First slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0009_life_vivara.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0003_ptez.jpg" alt="Second slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0008_lelis.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0002_LVA.jpg" alt="Third slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0002_LVA.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0004_nike.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0004_nike.jpg" alt="fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0005_bacio.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0005_bacio.jpg" alt="fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0007_dufry.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0007_dufry.jpg" alt="fourth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0000_vivara.jpg" alt="fourth slide">
+              </div>
+              <div class="carousel-item">
+                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0003_ptez.jpg" alt="fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -88,13 +94,13 @@
                         inovações que contribuam para uma melhor qualidade das obras e otimização dos custos.</p>
                 </div>
                 <div class="sobre-col-1">
-                    <img src="./assets/office.jpg" alt="foto-sobre">
+                    <img src="/assets/office.jpg" alt="foto-sobre">
                 </div>
                 
             </div>
             <div class="row">
                 <div class="sobre-col-1 second">
-                    <img src="./assets/tecnologia.gif" alt="foto-sobre">
+                    <img src="/assets/tecnologia.gif" alt="foto-sobre">
                 </div>
                 <div class="sobre-col-2 first">
                     <h1 id="tecnologia">Tecnologia</h1>
@@ -107,16 +113,16 @@
                 <!------------CLIENTES------------->
                 <div id="clientes">
                             <div class="grid">
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0000_vivara.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0001_vans.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0002_renner.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0003_petz .jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0004_nike.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0005_nestle.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0006_liebe.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0007_ellus.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0008_centauro.jpg" /></div>
-                            <div class="square"><img src="./assets/clientes/logo-clientes_0009_artex.jpg"/></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0000_vivara.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0001_vans.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0002_renner.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0003_petz .jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0004_nike.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0005_nestle.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0006_liebe.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0007_ellus.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0008_centauro.jpg" /></div>
+                            <div class="square"><img src="/assets/clientes/logo-clientes_0009_artex.jpg"/></div>
                         </div>
                 </div>
                 <!------------Contato------------->
@@ -149,7 +155,7 @@
         <div class="social-icons">
             <a href="http://www.instagram.com/construtorarocket/" target="_blank"><i class="fa-brands fa-instagram"></i></i></a>
             <a href="http://www.linkedin.com/company/rocket-construtora/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
-            <a href="tel:+551134672506"><i class="fa-brands fa-x-twitter"></i></a>
+<!-- <a href="tel:+551134672506"><i class="fa-brands fa-x-twitter"></i></a>-->
         </div>
         <div class="contatos">
             <a href="mailto:">
