--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/assets/rocket-logo-grande.png" class="logo">
+                <img src="/assets/rocket-logo-grande-5anos.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#quemsomos">Quem somos</a></li>
-                    <li><a href="#tecnologia">Tecnologia</a></li>
-                    <li><a href="#clientes">Clientes</a></li>
+                    <li><a href="#tecnologia">Como fazemos</a></li>
+                    <li><a href="#clientes">Nossa experiência</a></li>
                     <li><a href="#contato_form">Contato</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -94,7 +94,7 @@
                         inovações que contribuam para uma melhor qualidade das obras e otimização dos custos.</p>
                 </div>
                 <div class="sobre-col-1">
-                    <img src="/assets/office.jpg" alt="foto-sobre">
+                    <img src="/assets/fachada.jpg" alt="foto-sobre">
                 </div>
                 
             </div>
@@ -103,7 +103,7 @@
                     <img src="/assets/tecnologia.gif" alt="foto-sobre">
                 </div>
                 <div class="sobre-col-2 first">
-                    <h1 id="tecnologia">Tecnologia</h1>
+                    <h1 id="tecnologia">Como fazemos</h1>
                     <div class="bar"></div>
                     <p class="p-sobre">Combinar nossa expertise técnica com o uso estratégico de recursos inteligentes,
                         como o <span>LASER SCANNER</span>, é uma forma eficaz de melhorar a eficiência, a qualidade e a precisão dos nossos
@@ -112,7 +112,11 @@
                 </div>
                 <!------------CLIENTES------------->
                 <div id="clientes">
-                            <div class="grid">
+                    <div class="titulo-clientes">
+                        <h1>Nossa experiência</h1>
+                        <div class="bar-xp"></div>
+                    </div>
+                        <div class="grid">
                             <div class="square"><img src="/assets/clientes/logo-clientes_0000_vivara.jpg" /></div>
                             <div class="square"><img src="/assets/clientes/logo-clientes_0001_vans.jpg" /></div>
                             <div class="square"><img src="/assets/clientes/logo-clientes_0002_renner.jpg" /></div>
