--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="header">
         <div class="container">
             <nav>
-                <img src="/assets/rocket-logo-grande-5anos.png" class="logo">
+                <img src="./assets/rocket-logo-grande-5anos.png" class="logo">
                 <ul id="sidemenu">
                     <li><a href="#">Home</a></li>
                     <li><a href="#quemsomos">Quem somos</a></li>
@@ -48,28 +48,28 @@
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0009_life_vivara.jpg" alt="First slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0009_life_vivara.jpg" alt="First slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0008_lelis.jpg" alt="Second slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0008_lelis.jpg" alt="Second slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0002_LVA.jpg" alt="Third slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0002_LVA.jpg" alt="Third slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0004_nike.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0004_nike.jpg" alt="fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0005_bacio.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0005_bacio.jpg" alt="fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0007_dufry.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0007_dufry.jpg" alt="fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0000_vivara.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0000_vivara.jpg" alt="fourth slide">
               </div>
               <div class="carousel-item">
-                <img class="d-block w-100" src="/assets/carrossel/carrossel-_0003_ptez.jpg" alt="fourth slide">
+                <img class="d-block w-100" src="./assets/carrossel/carrossel-_0003_ptez.jpg" alt="fourth slide">
               </div>
             </div>
             <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -94,13 +94,13 @@
                         inovações que contribuam para uma melhor qualidade das obras e otimização dos custos.</p>
                 </div>
                 <div class="sobre-col-1">
-                    <img src="/assets/fachada.jpg" alt="foto-sobre">
+                    <img src="./assets/fachada.jpg" alt="foto-sobre">
                 </div>
                 
             </div>
             <div class="row">
                 <div class="sobre-col-1 second">
-                    <img src="/assets/tecnologia.gif" alt="foto-sobre">
+                    <img src="./assets/tecnologia.gif" alt="foto-sobre">
                 </div>
                 <div class="sobre-col-2 first">
                     <h1 id="tecnologia">Como fazemos</h1>
@@ -117,16 +117,16 @@
                         <div class="bar-xp"></div>
                     </div>
                         <div class="grid">
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0000_vivara.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0001_vans.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0002_renner.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0003_petz .jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0004_nike.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0005_nestle.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0006_liebe.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0007_ellus.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0008_centauro.jpg" /></div>
-                            <div class="square"><img src="/assets/clientes/logo-clientes_0009_artex.jpg"/></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0000_vivara.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0001_vans.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0002_renner.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0003_petz .jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0004_nike.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0005_nestle.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0006_liebe.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0007_ellus.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0008_centauro.jpg" /></div>
+                            <div class="square"><img src="./assets/clientes/logo-clientes_0009_artex.jpg"/></div>
                         </div>
                 </div>
                 <!------------Contato------------->
